<resources>
    <string name="app_name">API</string>
    <string name="chargement">Chargement...</string>
    <string name="min">Min°:</string>
    <string name="max">Max°:</string>
    <string name="entrez_le_nom_de_la_ville">Entrez le nom de la ville</string>
    <string name="rechercher">Rechercher</string>
    <string name="textviewmax">TextViewMax</string>
    <string name="textviewmin">TextViewMin</string>
    <string name="textviewnamecity">TextViewNameCity</string>
    <string name="activity_image" />
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="activity_image_desc" />
    <string name="nom_du_lieu">Nom du lieu</string>
    <string name="adresse_du_lieu">Adresse du lieu</string>
    <string name="description_du_lieu">Description du lieu</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="description">Description</string>
    <string name="adresse">Adresse</string>
    <string name="ic_ne_de_l_activit">Icône de l\'activité</string>
    <string name="retour">Retour</string>
    <string name="voir_sur_google_maps">Voir sur Google Maps</string>
    <string name="activit_s_sugg_r_es">Activités suggérées</string>
    <string name="activities_suggested" />
    <string name="activity_description" />
    <string name="activity_name" />
    <string name="weather_icon_description" />
    <string name="search_button_description" />
    <string name="more_options" />
    <string name="reserver" />
    <string name="icon_info" />
    <string name="activity_icon" />
    <string name="activity_details" />
    <string name="icon_location" />
</resources>